--- a/lzc-manifest.yml
+++ b/lzc-manifest.yml
@@ -1,6 +1,6 @@
 name: Pont
 package: community.lazycat.app.pont
-version: 0.1.5
+version: 0.1.6
 min_os_version: 1.3.8
 description: "A web-based tunnel management service supporting both Cloudflare Quick Tunnel and ngrok"
 license: MIT
@@ -9,14 +9,16 @@ author: czyt
 
 application:
   subdomain: pont
+  public_path:
+    - /
   upstreams:
     - location: /
       backend: http://host.lzcapp:13333/
 
 services:
   pont:
-    # ghcr.io/dockers-x/pont:v0.1.5
-    image: registry.lazycat.cloud/czyt/dockers-x/pont:869391e0f1a9a76b
+    # ghcr.io/dockers-x/pont:v0.1.6
+    image: registry.lazycat.cloud/czyt/dockers-x/pont:189a5eb865a2b946
     network_mode: host
     user: root
     environment:
